arreglo de min_order_size y ismulacion

--- a/docs/FIX-0702.md
+++ b/docs/FIX-0702.md
@@ -63,12 +63,14 @@ Frontend showed daily summary rows only. Backend already had full intraday `pred
 **What was broken:**
 Paper broker had `min_buy_notional_usd=1.0`, backtest simulator had no minimum. Hard gate existed but lacked reason counter.
 
+> **Update**: Minimum lowered to `$0.01` — the $1 minimum is a Polymarket UI restriction only. The CLOB API accepts much smaller orders (market-specific `min_order_size`). Both paper broker and backtest simulator now default to `$0.01`.
+
 **Changes made:**
 
 1. **`core/backtest/simulator.py`** (+25 lines)
-   - `TakerModel.execute()`: added `min_order_usd` param; bumps size to meet $1 minimum
-   - `ExecutionSimulator.__init__()`: added `min_order_usd=1.0` default
-   - Maker order enforcement: same $1 minimum applied to passive orders
+   - `TakerModel.execute()`: added `min_order_usd` param; bumps size to meet minimum
+   - `ExecutionSimulator.__init__()`: added `min_order_usd=0.01` default (API min, not UI $1)
+   - Maker order enforcement: same minimum applied to passive orders
 
 2. **`core/backtest/engine.py`**
    - `hard_gate_no_market` reason counter when signals blocked due to missing market data
